--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -9,8 +9,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - uses: mihails-strasuns/setup-dlang@v0.5.0
-    - name: Check syntax
-      run: dub lint --syntax-check
-    - name: Check style
-      run: dub lint --style-check
+    - name: Setup D environment
+      run: |
+        curl https://dlang.org/install.sh -O ~/dlang/install.sh
+        ~/dlang/install.sh install ldc
+        ~/dlang/install.sh install dub
