--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,7 +12,6 @@ jobs:
     - name: Setup D environment
       run: |
         mkdir ~/dlang
-        curl https://dlang.org/install.sh -fsS -o ~/dlang/install.sh
+        curl https://dlang.org/install.sh -fsS | bash -c
         sudo chmod +x ~/dlang/install.sh
         ~/dlang/install.sh install ldc
-        ~/dlang/install.sh install dub
