--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,8 +10,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Setup D environment
-      run: |
-        mkdir ~/dlang
-        curl https://dlang.org/install.sh -fsS | bash -c
-        sudo chmod +x ~/dlang/install.sh
-        ~/dlang/install.sh install ldc
+      run: curl https://dlang.org/install.sh -fsS | bash -c install ldc
