--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,4 +10,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Setup D environment
-      run: curl https://dlang.org/install.sh -fsS | bash -c install ldc
+      run: curl https://dlang.org/install.sh | bash -s install ldc
