--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,3 +11,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Setup D environment
       run: curl https://dlang.org/install.sh | bash -s install ldc
+    - name: Touch LDC
+      run: ldc2 --help
+    - name: Touch Dub
+      run: dub --help
