--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,7 +13,7 @@ jobs:
       run: curl https://dlang.org/install.sh | bash -s install ldc
     - name: Activate D environmant
       run: source ~/dlang/$(~/dlang/install.sh list)/activate
-    - name: Touch LDC
-      run: ldc2 --help
+    - name: echo $PATH
+      run: echo $PATH
     - name: Touch Dub
       run: dub --help
